# spirv_cross

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  appveyor.yml  minify-spirv-cross.sh
.github/: ci.yml
.travis/: android_gcc.sh  linux_clang.sh  linux_clang_coverage.sh  linux_gcc.sh  linux_wasm.sh  macos_clang.sh
bindings_generator/: Cargo.toml
bindings_generator/src/: main.rs
examples/: Cargo.toml
examples/src/: lib.rs  vertex.spv
examples/src/glsl/: main.rs
examples/src/hlsl/: main.rs
examples/src/msl/: main.rs
spirv_cross/: Cargo.toml  build.rs
spirv_cross/src/: bindings.rs  bindings_native.rs  bindings_wasm.rs  bindings_wasm_functions.rs  compiler.rs  emscripten.rs  glsl.rs  hlsl.rs  lib.rs  msl.rs  ptr_util.rs  spirv.rs  wrapper.cpp  wrapper.hpp
spirv_cross/tests/: glsl_tests.rs  hlsl.rs  hlsl_tests.rs  msl_tests.rs  spirv.rs  spirv_tests.rs
spirv_cross/tests/common/: mod.rs
spirv_cross/tests/shaders/: simple.spv  simple.vert  struct.frag  struct.vert
wasm/: Cargo.toml  spirv_cross_wrapper.js  spirv_cross_wrapper.wasm  spirv_cross_wrapper_glsl.js  spirv_cross_wrapper_glsl.wasm
wasm/src/: main.rs
