[package]
name = "examples"
version = "0.1.0"
authors = ["Joshua Groves <josh@joshgroves.com>"]
edition = "2018"

[dependencies]
spirv_cross = { path = "../spirv_cross", features = ["hlsl", "msl", "glsl"] }

[[bin]]
name = "hlsl"
path = "src/hlsl/main.rs"

[[bin]]
name = "msl"
path = "src/msl/main.rs"

[[bin]]
name = "glsl"
path = "src/glsl/main.rs"
