[package]
name = "spirv_cross"
version = "0.5.0"
authors = ["Joshua Groves <josh@joshgroves.com>"]
description = "Safe wrapper around SPIRV-Cross"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/grovesNL/spirv_cross"
repository = "https://github.com/grovesNL/spirv_cross"
readme = "../README.md"
keywords = ["spirv", "cross"]
build = "build.rs"

[build-dependencies]
cc = "1.0.4"
