[package]
name = "spirv_cross"
version = "0.12.1"
authors = ["Joshua Groves <josh@joshgroves.com>"]
description = "Safe wrapper around SPIRV-Cross"
license = "MIT/Apache-2.0"
homepage = "https://github.com/grovesNL/spirv_cross"
repository = "https://github.com/grovesNL/spirv_cross"
readme = "../README.md"
keywords = ["spirv", "cross"]
build = "build.rs"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["glsl", "hlsl", "msl"]
glsl = []
hlsl = []
msl = []

[build-dependencies]
cc = "1.0.4"
